# neural_rendering_navigational_interface

./: log.txt  train_splatfacto.sh
custom-viewer/: pyproject.toml  setup.py
custom-viewer/custom_viewer/: viewer_state.py
custom-viewer/custom_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
navigation_tools/: mock_server.py  navigational_socket_server.py  ws_client_demo.py
